--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">Habit Tracker</string>
     <string name="add_habit">Add Habit</string>
+    <string name="search">Search habits</string>
+    <string name="all">All</string>
+    <string name="active">Active</string>
+    <string name="paused">Paused</string>
 </resources>
