Add habit reminder scheduling and configuration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,23 @@
 <resources>
     <string name="app_name">Habit Tracker</string>
     <string name="add_habit">Add Habit</string>
+    <string name="edit_habit">Edit Habit</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="habit_name">Habit name</string>
+    <string name="habit_description">Description</string>
+    <string name="habit_frequency">Frequency per week</string>
+    <string name="habit_category">Category</string>
+    <string name="habit_name_required">Name is required</string>
+    <string name="reminder_enabled">Enable reminder</string>
+    <string name="reminder_select_time">Select reminder time</string>
+    <string name="reminder_days">Days of week</string>
+    <string name="reminder_requirements">Select a reminder time and at least one day.</string>
+    <string name="day_monday">Monday</string>
+    <string name="day_tuesday">Tuesday</string>
+    <string name="day_wednesday">Wednesday</string>
+    <string name="day_thursday">Thursday</string>
+    <string name="day_friday">Friday</string>
+    <string name="day_saturday">Saturday</string>
+    <string name="day_sunday">Sunday</string>
 </resources>
